[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticktickmd"
version = "0.1.0"
description = "Convert TickTick CSV backup exports into structured markdown files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jeffrey Parker", email = "jeffreyparker@users.noreply.github.com" }
]
keywords = ["ticktick", "markdown", "backup", "converter", "notes", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
ticktickmd = "ticktickmd.cli:main"

[project.urls]
Homepage = "https://github.com/jeffreyparker/ticktickmd"
Repository = "https://github.com/jeffreyparker/ticktickmd"
Issues = "https://github.com/jeffreyparker/ticktickmd/issues"
